RI-7520: fix icons spacing for multi search input (#5014)

--- a/redisinsight/ui/src/components/multi-search/styles.module.scss
+++ b/redisinsight/ui/src/components/multi-search/styles.module.scss
@@ -9,6 +9,7 @@
   .multiSearch {
     position: relative;
     flex: 1;
+    gap: 8px;
     height: 100%;
     display: flex;
     align-items: center;
@@ -103,10 +104,6 @@
       visibility: hidden;
       pointer-events: none;
     }
-  }
-
-  .historyIcon {
-    margin-inline: 8px;
   }
 
   .clearHistory {
